--- a/EShopAdminApplication/Views/Order/Index.cshtml
+++ b/EShopAdminApplication/Views/Order/Index.cshtml
@@ -9,6 +9,10 @@
 
 <div class="container">
 
+    <div class="row">
+        <a class="btn btn-outline-danger" asp-controller="Order" asp-action="ExportAllOrders">Export Orders</a>
+    </div>
+
 
     <table class="table mt-5">
         <thead class="thead-dark">
@@ -30,6 +34,7 @@
                     <td>@item.User.Email - @item.User.FirstName  @item.User.LastName</td>
                     <td>@item.ProductInOrders.Count()</td>
                     <td><a class="btn btn-outline-secondary" asp-action="Details" asp-route-id="@item.Id">Details</a></td>
+                    <td><a class="btn btn-outline-primary" asp-action="CreateInvoice" asp-route-id="@item.Id">Create Invoice</a></td>
                 </tr>
 
             }
